kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth
  name: auth
  namespace: ingest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth 
  strategy: {}
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - image: gonzaloacosta/python-fastapi-auth:0.0.10
        name: auth
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m" 
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
          - containerPort: 80
        imagePullPolicy: Always
