kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: articles
  name: articles
  namespace: devops
spec:
  ports:
  - port: 8080 
    protocol: TCP
    targetPort: 80
  selector:
    app: articles
  type: ClusterIP
